k8s-ingest.yml
apiVersion: v1
kind: Pod
metadata:
  name: flathub-ingest
spec:
  restartPolicy: Never
  volumes:
  - name: ingest
    hostPath:
      path: /mnt/sdceph/users
      type: Directory
  containers:
  - image: docker-registry:25703/flatironinstitute/flathub
    name: flathub
    resources:
      requests:
        cpu: 2
        memory: 4Gi
      limits:
        cpu: 8
        memory: 128Gi
    volumeMounts:
    - name: ingest
      mountPath: /ingest
      readOnly: true
    command: ["sleep", "infinity"]
