k8s-es.yml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: flathub-es
spec:
  selector:
    matchLabels:
      name: flathub-es
  template:
    metadata:
      labels:
        name: flathub-es
    spec:
      #nodeSelector:
        #nvme: "true" # TODO
      containers:
      - name: flathub-es
        image: docker.elastic.co/elasticsearch/elasticsearch:7.17.11-amd64
        resources:
          requests:
            cpu: 4
            memory: 32Gi
          limits:
            cpu: 8
            memory: 48Gi
        ports:
          - containerPort: 9200
            name: http
          - containerPort: 9300
            name: transport
        livenessProbe:
          tcpSocket:
            port: transport
          initialDelaySeconds: 15
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /_cluster/health
            port: http
          initialDelaySeconds: 30
          timeoutSeconds: 15
          periodSeconds: 60
        volumeMounts:
        - name: esdata
          mountPath: /usr/share/elasticsearch/data
      terminationGracePeriodSeconds: 60
      volumes:
      - name: esdata
        hostPath:
          path: /nvme/esdata
          type: Directory
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: flathub-es2
spec:
  selector:
    matchLabels:
      name: flathub-es2
  template:
    metadata:
      labels:
        name: flathub-es2
    spec:
      nodeSelector:
        nvme2: "true"
      containers:
      - name: flathub-es
        image: docker.elastic.co/elasticsearch/elasticsearch:7.17.11-amd64
        resources:
          requests:
            cpu: 2
            memory: 32Gi
          limits:
            cpu: 8
            memory: 48Gi
        ports:
          - containerPort: 9200
            name: http
          - containerPort: 9300
            name: transport
        livenessProbe:
          tcpSocket:
            port: transport
          initialDelaySeconds: 15
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /_cluster/health
            port: http
          initialDelaySeconds: 30
          timeoutSeconds: 15
          periodSeconds: 60
        volumeMounts:
        - name: esdata
          mountPath: /usr/share/elasticsearch/data
      terminationGracePeriodSeconds: 60
      volumes:
      - name: esdata
        hostPath:
          path: /nvme2/esdata
          type: Directory
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
---
apiVersion: v1
kind: Service
metadata:
  name: flathub-es-trans
spec:
  selector:
    name: flathub-es
  publishNotReadyAddresses: true
  ports:
  - name: transport
    port: 9300
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name: flathub-es
spec:
  selector:
    name: flathub-es
  ports:
  - name: http
    port: 9200
