k8s.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flathub
spec:
  selector:
    matchLabels:
      name: flathub
  template:
    metadata:
      labels:
        name: flathub
        elkes: "true"
      annotations:
        co.elastic.logs/pipeline: waimwork-access
    spec:
      containers:
      - image: flatironinstitute/flathub
        name: flathub
        args: ["-f","/home/flathub/config/config","+RTS","-N4"]
        resources:
          requests:
            cpu: 2
            memory: 8Gi
          limits:
            cpu: 8
            memory: 32Gi
        ports:
        - containerPort: 8092
          name: http
        readinessProbe:
          httpGet:
            path: /
            port: http
            httpHeaders:
              - name: accept
                value: application/json
          initialDelaySeconds: 30
          timeoutSeconds: 15
          periodSeconds: 60
        volumeMounts:
          - mountPath: /home/flathub/config
            name: config
            readOnly: true
          - mountPath: /home/flathub/flathub/tls
            name: tls
            readOnly: true
          - mountPath: /data/gr8
            name: gr8
            readOnly: true
      volumes:
        - name: config
          configMap:
            name: flathub
        - name: tls
          secret:
            secretName: flathub-tls
        - name: gr8
          hostPath:
            path: /mnt/sdceph/users/mbedell/gr8stars
            type: Directory
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: flathub
  annotations:
    external-dns.alpha.kubernetes.io/enabled: "true"
    external-dns.alpha.kubernetes.io/hostname: flathub.flatironinstitute.org.,astrosims.flatironinstitute.org.
spec:
  selector:
    name: flathub
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: https
    port: 443
    targetPort: http
  type: LoadBalancer
  loadBalancerIP: 132.249.246.21
  externalTrafficPolicy: Local
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flathub
spec:
  parentRefs:
  - name: public
    namespace: ngf
  hostnames:
  - flathub.flatironinstitute.org
  - astrosims.flatironinstitute.org
  rules:
  - backendRefs:
    - name: flathub
      port: 80
